[package]
name = "keylogger"
version = "0.1.0"
edition = "2021"

[dependencies]
rdev = "0.5.3"
reqwest = {version = "0.12.12", features = ["json", "blocking"]}
#tokio = {version = "1.43.0", features = ["full"]}  #for testing
#tokio-macros = { version = "2.5.0" }  #for testing
#serde = "1.0.217"  #for testing
